<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/info_btn_selector"
            android:gravity="center" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_organization_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_org"
        android:hint="@string/register_as_admin_organization_hint"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/padding_admin_registration_edittext" />

    <EditText
        android:id="@+id/et_full_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_profile"
        android:hint="@string/register_as_admin_profile_hint"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/padding_admin_registration_edittext" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_email"
        android:hint="@string/register_as_admin_email_hint"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/padding_admin_registration_edittext" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_password"
        android:hint="@string/register_as_admin_password_hint"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/padding_admin_registration_edittext" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_password"
        android:hint="@string/register_as_admin_confirm_password_hint"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/padding_admin_registration_edittext" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/register_btn_selector" />

    <TextView
        android:id="@+id/tv_admin_registartion_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_as_admin_note"
        android:textColor="@color/register_as_admin_note_color"
        android:textSize="18sp" />

</LinearLayout>